# infiquetra-aws-infra

./: .actrc  .bandit  .env.example  .gitignore  .pre-commit-config.yaml  .secrets  AGENTS.md  QUICKSTART.md  README.md  app.py  app_campps_bootstrap.py  cdk.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup-env.sh
.claude/: CLAUDE.md  audit-current-state.md  settings.json  settings.local.json
.claude/plans/: fix-cicd-pipeline.md  infiquetra-organizations-setup.md
.github/: CICD-MIGRATION.md
.github/actions/setup-aws-credentials/: action.yml
.github/actions/setup-node-cdk/: action.yml
.github/actions/setup-python-uv/: action.yml
.github/workflows/: cd.yml  ci.yml  cost-estimate.yml  deploy-infrastructure.yml  deploy.yml  pull-request-validation.yml  reusable-aws-deployment.yml  reusable-cdk-synthesis.yml  reusable-code-quality.yml  reusable-deploy.yml  reusable-security-scan.yml  reusable-security.yml  reusable-test.yml  security-scan.yml  validate.yml
.hermes/: round-2-plan.md  round-3-plan.md
docs/code-reviews/: 2026-07-11-e2e-live-proof-role-code-review.md
docs/engineering-journal/: ARCHIVE.md  DECISIONS.md  LEARNINGS.md  QUEUED.md  README.md
docs/engineering-journal/audits/: README.md
docs/engineering-journal/narratives/: README.md
docs/learnings/: ARCHIVE.md  DECISIONS.md  LEARNINGS.md  QUEUED.md  README.md
docs/onboarding/: 01-getting-aws-access.md  02-local-dev-setup.md  03-making-changes.md  04-troubleshooting.md  README.md
docs/ops/: 01-aws-organization.md  02-identity-and-access.md  03-login-flows.md  04-ci-cd-pipeline.md  05-security-controls.md  06-cost.md  07-whats-next.md  README.md
docs/ops/diagrams/: generate.py
docs/plans/: 2026-06-20-c0-3-aws-infra-service-registry-oidc-plan.md  2026-07-02-e2e-canary-identity-scope-readback-iam-plan.md
docs/retros/: issue-134-2026-06-20.md
docs/reviews/: 2026-06-20-c0-3-aws-infra-service-registry-oidc-review.md  2026-07-02-e2e-canary-identity-scope-readback-iam-plan-review.md
docs/superpowers/plans/: 2026-05-06-campps-aws-ci-foundation.md
docs/superpowers/specs/: 2026-05-06-campps-aws-ci-foundation-design.md
docs/work-sessions/: 2026-06-20-c0-3-service-registry-oidc.md  2026-07-02-e2e-canary-identity-scope-readback-iam.md  2026-07-11-e2e-live-proof-role.md
github-oidc-bootstrap/: .cfnlintrc.yaml  .env.example  Makefile  README.md  app.py  cdk.json  pyproject.toml  requirements.txt
github-oidc-bootstrap/github_oidc_bootstrap/: github_oidc_stack.py
github-oidc-bootstrap/tests/unit/: test_github_oidc_stack.py
infiquetra_aws_infra/: campps_deploy_roles_stack.py  campps_service_registry.py  home_lab_dns_stack.py  naming.py  organization_stack.py  sso_stack.py  tagging.py
infiquetra_aws_infra/constructs/: secure_bucket.py
infiquetra_organizations/: __init__.py  organization_stack.py  sso_stack.py
tasks/: todo.md
tests/: test_naming.py  test_secure_bucket.py  test_tagging.py
tests/unit/: test_campps_deploy_roles_stack.py  test_home_lab_dns_stack.py  test_organization_stack.py  test_sso_stack.py
